Correction des avertissements de dépréciation par Java JDK 20+